fix config docker and remuve trash

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-server.port: 8002
+server.port: 8011
 
 
 spring:
@@ -8,6 +8,7 @@ spring:
         property-naming-strategy: SNAKE_CASE
 
     data.mongodb.uri: mongodb://mpp-person-mongodb/mpp-person
+#    data.mongodb.uri: mongodb://localhost:27017/mpp-person
 
 #logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions: TRACE
 #spring.http.log-request-details: true
